task3 clean prefinal

--- a/task3_ws/src/tortoisebot_gazebo/config/moving_env_bridge.yaml
+++ b/task3_ws/src/tortoisebot_gazebo/config/moving_env_bridge.yaml
@@ -22,6 +22,12 @@
   gz_type_name: "gz.msgs.Twist"
   direction: ROS_TO_GZ
 
+- ros_topic_name: "odom"
+  gz_topic_name: "odom"
+  ros_type_name: "nav_msgs/Odometry.msg"
+  gz_type_name: "gz.msgs.Odometry"
+  direction: GZ_TO_ROS
+
 - ros_topic_name: "scan"
   gz_topic_name: "scan"
   ros_type_name: "sensor_msgs/msg/LaserScan"
@@ -33,12 +39,6 @@
   ros_type_name: "geometry_msgs/msg/Twist"
   gz_type_name: "gz.msgs.Twist"
   direction: ROS_TO_GZ
-
-- ros_topic_name: "/world/empty/pose/info"
-  gz_topic_name: "/world/empty/pose/info"
-  ros_type_name: "geometry_msgs/msg/PoseArray"
-  gz_type_name: "gz.msgs.Pose_V"
-  direction: GZ_TO_ROS
 
 
 
